# thinkpad-fan-tweak

./: .gitignore  CMakeLists.txt  README.md  thinkpad-fan-tweak.service.in
src/: config.c  config.h  main.c
